Fixes so that the shield’s text doesn’t overflow on narrow screens (mainly for Russian)

--- a/inkscape/static/css/mobile-device.css
+++ b/inkscape/static/css/mobile-device.css
@@ -393,6 +393,13 @@ div.toc,
 
 
   /* Homepage */
+  #banners > div > div {
+    margin: 0;
+  }
+  #banners > div > div > p.text {
+    font-size: 16px;
+  }
+
   #shield .tabs:not(.expanded) {
     font-size: 0;
   }
